fix(js): 🐛  z-index issue fix, package manager update (#280)

--- a/apps/website/src/style.css
+++ b/apps/website/src/style.css
@@ -102,7 +102,6 @@ a:hover {
 }
 
 .bottomsheet {
-  z-index: 150 !important;
   font-family: "Inter V", sans-serif;
   border-radius: 14px 14px 0 0;
 }
